# mini-echo-server

./: README.md
app/: CMakeLists.txt  echo-serv-mio.c  echo-serv-pool.c  echo-serv-proc.c  echo-serv-thd.c  echo-serv.c  hostinfo-app.c  io-multiplex.c
lib/: CMakeLists.txt
lib/include/: hostinfo.h  sbuf.h
lib/src/: hostinfo.c  sbuf.c
